example/errors/references.dpl.err
Traceback (most recent call last):
  File "/storage/emulated/0/dpl/example/../dpl.py", line 219, in <module>
    ez_run(f.read(), sys.argv[0])
  File "/storage/emulated/0/dpl/example/../dpl.py", line 197, in ez_run
    if err := parser.run(code):
              ^^^^^^^^^^^^^^^^
  File "/storage/emulated/0/dpl/lib/core/py_parser.py", line 1088, in run
    return execute(code, frame)
           ^^^^^^^^^^^^^^^^^^^^
  File "/storage/emulated/0/dpl/lib/core/py_parser.py", line 936, in execute
    err = execute(temp["body"], frame)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/storage/emulated/0/dpl/lib/core/py_parser.py", line 446, in execute
    args = process_args(frame, oargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/storage/emulated/0/dpl/lib/core/arguments.py", line 706, in process_args
    return list(map(lambda x: expr_runtime(frame, x), e))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/storage/emulated/0/dpl/lib/core/arguments.py", line 706, in <lambda>
    return list(map(lambda x: expr_runtime(frame, x), e))
                              ^^^^^^^^^^^^^^^^^^^^^^
  File "/storage/emulated/0/dpl/lib/core/arguments.py", line 382, in expr_runtime
    return reference["value"]
           ~~~~~~~~~^^^^^^^^^
TypeError: tuple indices must be integers or slices, not str
